# cba-agentic-ai

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
agent/: __init__.py  composer.py  graph.py  operator.py  runtime.py  scenario_test_hooks.py  state.py
agent/stages/: __init__.py
api/: main.py  schemas.py
application/: __init__.py  cache.py  runtime.py  user_interface.py
cache/: __init__.py  agent.py  application.py  context.py  graph.py  language_model.py  memory.py
context/: __init__.py  chat_history.py  db_config.py  db_manager.py  db_table.py  manager.py  short_memory.py  working_dataset.csv
context/database/: __init__.py  config.py  manager.py
context/datasets/: __init__.py  dataset.csv
context/models/: __init__.py  chat_history.py  short_memory.py  tables.py
context/system_prompts/: __init__.py  __prompts_v1.py  analytical_plan.py  analytical_requirement.py  analytical_response.py  analytical_result.py  context_distillation.py  data_availability.py  data_retrieval_plan.py  data_unavailability_response.py  direct_response.py  infographic_plan.py  infographic_requirement.py  (+5 more)
docker_script/: external_database_factory.py  internal_database_init.py  synthetic_data.csv
docker_scripts/: external_database_factory.py
graph/: __init__.py  operator.py  orchestrator.py  runtime.py  state.py
memory/: __init__.py  manager.py
notebook/: agent_graph_mermaid.txt  get_mermaid_graph.ipynb
schema/: __init__.py  llm_output.py
util/: __init__.py  custom_decorator.py
(+16 files in other folders)
